--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "url": "https://github.com/goodeggs/geomoment/issues"
   },
   "dependencies": {
-    "moment-timezone": "0.0.3"
+    "moment-timezone": ">=0.0.3",
+    "moment": "2.x.x"
   },
   "devDependencies": {
     "mocha": "~1.15.1",
