--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "moment-timezone, if moment-timezone forced you to choose a particular moment in time. also, some extra sugar.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --compilers coffee:coffee-script spec/*.spec.coffee",
-    "pretest": "./node_modules/.bin/coffee --bare --compile --output lib/ src/ && ./node_modules/.bin/coffee util/document_date_formats.coffee"
+    "test": "mocha --compilers coffee:coffee-script spec/*.spec.coffee",
+    "build": "coffee --bare --compile --output lib/ src/ && npm run document",
+    "document": "coffee util/document_date_formats.coffee",
+    "pretest": "npm run build"
   },
   "repository": {
     "type": "git",
