--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "geomoment",
-  "version": "0.5.0",
+  "version": "1.0.0",
   "description": "moment-timezone, if moment-timezone forced you to choose a particular moment in time. also, some extra sugar.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script spec/*.spec.coffee",
+    "test": "mocha --compilers coffee:'coffee-script/register' spec/*.spec.coffee",
     "build": "coffee --bare --compile --output lib/ src/ && npm run document",
     "document": "coffee util/document_date_formats.coffee",
     "pretest": "npm run build"
@@ -26,13 +26,13 @@
   "bugs": {
     "url": "https://github.com/goodeggs/geomoment/issues"
   },
-  "dependencies": {
+  "peerDependencies": {
     "moment-timezone": ">=0.0.3",
     "moment": "2.x.x"
   },
   "devDependencies": {
-    "mocha": "~1.15.1",
-    "coffee-script": "~1.6.3",
-    "chai": "~1.8.1"
+    "mocha": "^1.18.2",
+    "coffee-script": "^1.7.1",
+    "chai": "^1.9.1"
   }
 }
