--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script test/**/*.coffee",
-    "build": "coffee --bare --compile --output lib/ src/ && npm run document",
+    "build": "coffee --bare --compile --output lib/ src/ && npm run patchMoment && npm run document",
+    "patchMoment": "coffee util/patch_moment.coffee",
     "document": "coffee util/document_date_formats.coffee",
     "pretest": "npm run build"
   },
@@ -26,11 +27,10 @@
   "bugs": {
     "url": "https://github.com/goodeggs/geomoment/issues"
   },
-  "dependencies": {
-    "moment": "^2.7.0",
-    "moment-timezone": "^0.1.0"
-  },
   "devDependencies": {
+    "moment": "^2.7.0",
+    "moment-timezone": "^0.1.0",
+    "falafel": "^0.3.1",
     "mocha": "~1.15.1",
     "coffee-script": "~1.6.3",
     "chai": "~1.8.1"
