--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "mocha": "~1.15.1",
     "coffee-script": "~1.6.3",
     "chai": "~1.8.1"
+  },
+  "dependencies": {
+    "moment": "^2.12.0"
   }
 }
