--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "url": "https://github.com/goodeggs/geomoment/issues"
   },
   "devDependencies": {
-    "moment": "^2.7.0",
+    "moment": "2.7.0",
     "moment-timezone": "^0.1.0",
     "falafel": "^0.3.1",
     "mocha": "~1.15.1",
