--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script test/**/*.coffee",
-    "build": "coffee --bare --compile --output lib/ src/ && npm run patchMoment && npm run document",
-    "patchMoment": "coffee util/patch_moment.coffee",
+    "build": "coffee --bare --compile --output lib/ src/ && npm run document",
     "document": "coffee util/document_date_formats.coffee",
     "pretest": "npm run build"
   },
@@ -34,5 +33,8 @@
     "mocha": "~1.15.1",
     "coffee-script": "~1.6.3",
     "chai": "~1.8.1"
+  },
+  "dependencies": {
+    "moment-timezone": "^0.5.3"
   }
 }
