Rethink how we autogenerate the documentation:
Previously, running the tests trigger the documentation to be
regenerated, which was surprising and not seen in other projects written
and maintained by GoodEggs. Also due to the way that the README was
being generated, some contributions were being overwritten.

This commit does two things:

 * Moves the autogenerated docs into FORMATS.md, and links to them from
   the README, to prevent additions to the README from being
   overwritten
 * Generates the docs during npm publish, so its less surprising when
   they are generated.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --compilers coffee:coffee-script test/**/*.coffee",
-    "build": "coffee --bare --compile --output lib/ src/ && npm run document",
+    "build": "coffee --bare --compile --output lib/ src/",
+    "prepublish": "npm run document",
     "document": "coffee util/document_date_formats.coffee",
     "pretest": "npm run build"
   },
